--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,11 @@
                 <artifactId>bot-test</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>ai.tock</groupId>
+                <artifactId>tock-bot-orchestration</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>io.vertx</groupId>
