--- a/nlp/admin/pom.xml
+++ b/nlp/admin/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>ai.tock</groupId>
     <artifactId>tock-nlp</artifactId>
-    <version>20.3.2</version>
+    <version>20.3.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>tock-nlp-admin</artifactId>
