--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -28,6 +28,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "ang-jsoneditor": "^1.8.4",
     "angular-file-saver": "^1.1.3",
+    "angular-google-charts": "^1.1.4",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "ckeditor4": "^4.12.1",
@@ -39,6 +40,7 @@
     "cytoscape-dagre": "^1.1.10",
     "echarts": "^4.7.0",
     "eva-icons": "^1.1.3",
+    "html2pdf.js": "^0.9.2",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "jsoneditor": "^7.5.0",
