--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
         <kotlin>1.3.72</kotlin>
-        <couroutine>1.3.6</couroutine>
+        <couroutine>1.3.7</couroutine>
 
         <slf4j>1.7.30</slf4j>
         <logback>1.2.3</logback>
@@ -40,7 +40,7 @@
         <kotlin-logging>1.8.0.1</kotlin-logging>
 
         <kodein>4.1.0</kodein>
-        <kmongo>4.0.2</kmongo>
+        <kmongo>4.0.3</kmongo>
         <jackson>2.11.1</jackson>
         <jackson-databind>2.11.1</jackson-databind>
         <jackson-module>2.11.1</jackson-module>
@@ -50,7 +50,7 @@
         <klaxon>5.2</klaxon>
         <vertx>3.9.1</vertx>
         <retrofit>2.9.0</retrofit>
-        <okhttp>4.7.2</okhttp>
+        <okhttp>4.8.0</okhttp>
         <okhttp-signpost>1.1.0</okhttp-signpost>
         <signpost-core>1.2.1.2</signpost-core>
         <circuitbreaker>1.5.0</circuitbreaker>
@@ -440,6 +440,12 @@
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>okhttp-urlconnection</artifactId>
                 <version>${okhttp}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>mockwebserver</artifactId>
+                <version>${okhttp}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
