resolves #353 integrate RASA as NLP engine
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/model/pom.xml
+++ b/nlp/model/pom.xml
@@ -35,6 +35,7 @@
         <module>client</module>
         <module>storage-mongo</module>
         <module>opennlp</module>
+        <module>rasa</module>
     </modules>
 
     <dependencies>
