--- a/bot/admin/kotlin-compiler/shared/pom.xml
+++ b/bot/admin/kotlin-compiler/shared/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot-admin-kotlin-compiler</artifactId>
-        <version>20.3.3-SNAPSHOT</version>
+        <version>20.3.3</version>
     </parent>
 
     <artifactId>tock-bot-admin-kotlin-compiler-shared</artifactId>
