--- a/bot/connector-alexa/pom.xml
+++ b/bot/connector-alexa/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>20.3.3</version>
+        <version>20.3.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot-connector-alexa</artifactId>
