resolves #850 update menus/tabs in docsite
- update renamed and moved menus/tabs (fr+en)
- add new tabs with short description (fr)
- update menu order (fr)

Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/docs-mk/fr/mkdocs.yml
+++ b/docs-mk/fr/mkdocs.yml
@@ -19,12 +19,12 @@ nav:
       - 'Tock Studio':
         - 'Présentation': 'user/studio.md'
         - 'Interface générale': 'user/studio/general.md'
-        - 'Le menu Configuration': 'user/studio/configuration.md'
-        - 'Le menu NLU': 'user/studio/nlu.md'
-        - 'Le menu NLU QA': 'user/studio/nlu-qa.md'
-        - 'Le menu Build': 'user/studio/stories-and-answers.md'
+        - 'Le menu Language': 'user/studio/nlu.md'
+        - 'Le menu Stories': 'user/studio/stories-and-answers.md'
         - 'Le menu Test': 'user/studio/test.md'
-        - 'Le menu Monitoring': 'user/studio/monitoring.md'
+        - 'Le menu Analytics': 'user/studio/analytics.md'
+        - 'Le menu Quality': 'user/studio/nlu-qa.md'
+        - 'Le menu Settings': 'user/studio/configuration.md'
       - 'Construire un modèle conversationnel':  'user/studio/build-model.md'
       - 'Bot multicanal': 'user/canaux.md'
       - 'Bot multilingue': 'user/i18n.md'
