--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -49,7 +49,7 @@
     "moment": "2.24.0",
     "nebular-icons": "1.1.0",
     "ng2-charts": "^2.3.0",
-    "ng2-ckeditor": "^1.2.7",
+    "ng2-ckeditor": "1.2.7",
     "ng2-completer": "^3.0.3",
     "ng2-file-upload": "^1.4.0",
     "ngx-echarts": "^4.2.2",
