--- a/pom.xml
+++ b/pom.xml
@@ -31,26 +31,26 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
-        <kotlin>1.3.72</kotlin>
-        <couroutine>1.3.7</couroutine>
+        <kotlin>1.4.0</kotlin>
+        <couroutine>1.3.9</couroutine>
 
         <slf4j>1.7.30</slf4j>
         <logback>1.2.3</logback>
 
-        <kotlin-logging>1.8.0.1</kotlin-logging>
+        <kotlin-logging>1.8.3</kotlin-logging>
 
         <kodein>4.1.0</kodein>
-        <kmongo>4.0.3</kmongo>
-        <jackson>2.11.1</jackson>
-        <jackson-databind>2.11.1</jackson-databind>
-        <jackson-module>2.11.1</jackson-module>
+        <kmongo>4.1.2</kmongo>
+        <jackson>2.11.2</jackson>
+        <jackson-databind>2.11.2</jackson-databind>
+        <jackson-module>2.11.2</jackson-module>
         <jackson-module-loader>0.1.0</jackson-module-loader>
         <jackson-data>0.1.0</jackson-data>
         <jackson-generator>0.3.1</jackson-generator>
-        <klaxon>5.2</klaxon>
-        <vertx>3.9.1</vertx>
+        <klaxon>5.4</klaxon>
+        <vertx>3.9.2</vertx>
         <retrofit>2.9.0</retrofit>
-        <okhttp>4.8.0</okhttp>
+        <okhttp>4.8.1</okhttp>
         <okhttp-signpost>1.1.0</okhttp-signpost>
         <signpost-core>1.2.1.2</signpost-core>
         <circuitbreaker>1.5.0</circuitbreaker>
@@ -61,19 +61,19 @@
         <commons-csv>1.8</commons-csv>
         <emoji>5.0</emoji>
         <commons-codec>1.14</commons-codec>
-        <commons-lang>3.10</commons-lang>
+        <commons-lang>3.11</commons-lang>
         <json>20200518</json>
         <httpclient>4.5.12</httpclient>
         <simmetrics>4.1.1</simmetrics>
         <batik>1.12</batik>
-        <google>8.0.0</google>
-        <aws-sdk>1.11.821</aws-sdk>
+        <google>9.1.0</google>
+        <aws-sdk>1.11.847</aws-sdk>
 
-        <junit-jupiter>5.6.2</junit-jupiter>
+        <junit-jupiter>5.7.0-RC1</junit-jupiter>
 
         <mockk>1.10.0</mockk>
         <assertj>3.12.2</assertj>
-        <byte-buddy>1.10.13</byte-buddy>
+        <byte-buddy>1.10.14</byte-buddy>
         <atrium>0.8.0</atrium>
 
         <plugin.surefire>3.0.0-M5</plugin.surefire>
@@ -89,7 +89,7 @@
         <plugin.ant>3.0.0</plugin.ant>
         <plugin.shade>3.2.4</plugin.shade>
         <plugin.dependency>3.1.2</plugin.dependency>
-        <plugin.resources>3.1.0</plugin.resources>
+        <plugin.resources>3.2.0</plugin.resources>
         <plugin.deploy>3.0.0-M1</plugin.deploy>
 
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
