--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -13,18 +13,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.4",
-    "@angular/cdk": "^9.2.2",
-    "@angular/common": "^9.1.4",
-    "@angular/compiler": "^9.1.4",
-    "@angular/core": "^9.1.4",
-    "@angular/forms": "^9.1.4",
-    "@angular/material": "^9.2.2",
-    "@angular/platform-browser": "^9.1.4",
-    "@angular/platform-browser-dynamic": "^9.1.4",
-    "@angular/router": "^9.1.4",
-    "@nebular/eva-icons": "5.1.0",
-    "@nebular/theme": "5.1.0",
+    "@angular/animations": "^10.0.9",
+    "@angular/cdk": "10.1.1",
+    "@angular/common": "^10.0.9",
+    "@angular/compiler": "^10.0.9",
+    "@angular/core": "^10.0.9",
+    "@angular/forms": "^10.0.9",
+    "@angular/localize": "^10.0.9",
+    "@angular/material": "10.1.1",
+    "@angular/platform-browser": "^10.0.9",
+    "@angular/platform-browser-dynamic": "^10.0.9",
+    "@angular/router": "^10.0.9",
+    "@nebular/eva-icons": "6.0.0",
+    "@nebular/theme": "6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "ang-jsoneditor": "^1.8.4",
     "angular-file-saver": "^1.1.3",
@@ -47,47 +48,47 @@
     "moment": "2.24.0",
     "nebular-icons": "1.1.0",
     "ng2-charts": "^2.3.0",
-    "ng2-ckeditor": "1.2.7",
+    "ng2-ckeditor": "^1.2.7",
     "ng2-completer": "^3.0.3",
     "ng2-file-upload": "^1.4.0",
     "ngx-echarts": "^4.2.2",
     "ngx-infinite-scroll": "^8.0.2",
     "ngx-moment": "^3.5.0",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
-    "rxjs": "6.5.5",
+    "rxjs": "6.6.2",
     "rxjs-compat": "6.3.0",
     "rxjs-tslint": "^0.1.8",
     "socicon": "3.0.5",
     "tinymce": "4.9.11",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "typeface-exo": "0.0.22",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.4",
-    "@angular/cli": "^9.1.4",
-    "@angular/compiler-cli": "^9.1.4",
-    "@angular/language-service": "^9.1.4",
+    "@angular-devkit/build-angular": "~0.1000.6",
+    "@angular/cli": "^10.0.6",
+    "@angular/compiler-cli": "^10.0.9",
+    "@angular/language-service": "^10.0.9",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.0.4",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^6.0.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "stylelint": "^13.3.3",
     "ts-node": "3.2.2",
-    "tslint": "^5.20.1",
+    "tslint": "~6.1.0",
     "tslint-language-service": "^0.9.9",
-    "typescript": "3.8.3"
+    "typescript": "3.9.7"
   }
 }
