--- a/nlp/build-model-worker-on-aws-batch/pom.xml
+++ b/nlp/build-model-worker-on-aws-batch/pom.xml
@@ -48,4 +48,30 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jetbrains.dokka</groupId>
+                <artifactId>dokka-maven-plugin</artifactId>
+                <version>${plugin.dokka}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>dokka</goal>
+                            <goal>javadoc</goal>
+                            <goal>javadocJar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <jdkVersion>8</jdkVersion>
+                    <reportUndocumented>false</reportUndocumented>
+                    <sourceDirectories>
+                        <dir>${project.basedir}/../build-model-worker/src/main/kotlin</dir>
+                    </sourceDirectories>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
