--- a/bot/admin/test/pom.xml
+++ b/bot/admin/test/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot-admin</artifactId>
-        <version>20.3.4-SNAPSHOT</version>
+        <version>20.3.4</version>
     </parent>
 
     <artifactId>tock-bot-admin-test</artifactId>
