--- a/bot/api/service/pom.xml
+++ b/bot/api/service/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot-api</artifactId>
-        <version>20.3.4-SNAPSHOT</version>
+        <version>20.3.4</version>
     </parent>
 
     <artifactId>tock-bot-api-service</artifactId>
