--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -29,7 +29,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "ang-jsoneditor": "^1.8.4",
     "angular-file-saver": "^1.1.3",
-    "angular-google-charts": "^1.1.4",
+    "angular-google-charts": "1.1.4",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "ckeditor4": "^4.12.1",
