--- a/bot/api/retrofit-jackson-client/pom.xml
+++ b/bot/api/retrofit-jackson-client/pom.xml
@@ -63,7 +63,7 @@
         </dependency>
         <dependency>
             <groupId>io.github.microutils</groupId>
-            <artifactId>kotlin-logging</artifactId>
+            <artifactId>kotlin-logging-jvm</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
