--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,13 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
-        <kotlin>1.4.0</kotlin>
+        <kotlin>1.4.10</kotlin>
         <couroutine>1.3.9</couroutine>
 
         <slf4j>1.7.30</slf4j>
         <logback>1.2.3</logback>
 
-        <kotlin-logging>1.8.3</kotlin-logging>
+        <kotlin-logging>2.0.3</kotlin-logging>
 
         <kodein>4.1.0</kodein>
         <kmongo>4.1.2</kmongo>
@@ -48,9 +48,9 @@
         <jackson-data>0.1.0</jackson-data>
         <jackson-generator>0.3.1</jackson-generator>
         <klaxon>5.4</klaxon>
-        <vertx>3.9.2</vertx>
+        <vertx>3.9.3</vertx>
         <retrofit>2.9.0</retrofit>
-        <okhttp>4.8.1</okhttp>
+        <okhttp>4.9.0</okhttp>
         <okhttp-signpost>1.1.0</okhttp-signpost>
         <signpost-core>1.2.1.2</signpost-core>
         <circuitbreaker>1.5.0</circuitbreaker>
@@ -60,20 +60,20 @@
         <jasypt>1.9.3</jasypt>
         <commons-csv>1.8</commons-csv>
         <emoji>5.0</emoji>
-        <commons-codec>1.14</commons-codec>
+        <commons-codec>1.15</commons-codec>
         <commons-lang>3.11</commons-lang>
         <json>20200518</json>
         <httpclient>4.5.12</httpclient>
         <simmetrics>4.1.1</simmetrics>
         <batik>1.12</batik>
-        <google>9.1.0</google>
-        <aws-sdk>1.11.847</aws-sdk>
+        <google>11.0.0</google>
+        <aws-sdk>1.11.870</aws-sdk>
 
-        <junit-jupiter>5.7.0-RC1</junit-jupiter>
+        <junit-jupiter>5.7.0</junit-jupiter>
 
         <mockk>1.10.0</mockk>
         <assertj>3.12.2</assertj>
-        <byte-buddy>1.10.14</byte-buddy>
+        <byte-buddy>1.10.16</byte-buddy>
         <atrium>0.8.0</atrium>
 
         <plugin.surefire>3.0.0-M5</plugin.surefire>
@@ -81,7 +81,7 @@
         <plugin.release>3.0.0-M1</plugin.release>
         <plugin.gpg>1.6</plugin.gpg>
         <plugin.nexus-staging>1.6.8</plugin.nexus-staging>
-        <plugin.dokka>0.10.1</plugin.dokka>
+        <plugin.dokka>1.4.10</plugin.dokka>
         <plugin.assembly>3.3.0</plugin.assembly>
         <plugin.frontend>1.10.0</plugin.frontend>
         <plugin.clean>3.1.0</plugin.clean>
@@ -497,7 +497,7 @@
 
             <dependency>
                 <groupId>io.github.microutils</groupId>
-                <artifactId>kotlin-logging</artifactId>
+                <artifactId>kotlin-logging-jvm</artifactId>
                 <version>${kotlin-logging}</version>
                 <exclusions>
                     <exclusion>
