--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -121,7 +121,7 @@
 
         <dependency>
             <groupId>io.github.microutils</groupId>
-            <artifactId>kotlin-logging</artifactId>
+            <artifactId>kotlin-logging-jvm</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
