--- a/bot/admin/kotlin-compiler/core/pom.xml
+++ b/bot/admin/kotlin-compiler/core/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot-admin-kotlin-compiler</artifactId>
-        <version>20.9.0-SNAPSHOT</version>
+        <version>20.9.0</version>
     </parent>
 
     <artifactId>tock-bot-admin-kotlin-compiler-core</artifactId>
