show docsite latest update (by page+global)
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/docs-mk/fr/mkdocs.yml
+++ b/docs-mk/fr/mkdocs.yml
@@ -70,6 +70,7 @@ plugins:
   - search:
       lang: 'fr'
   - macros
+  - git-revision-date-localized
 markdown_extensions:
   - admonition
   - codehilite
