--- a/docs-mk/fr/mkdocs-dark.yml
+++ b/docs-mk/fr/mkdocs-dark.yml
@@ -72,6 +72,7 @@ plugins:
   - search:
       lang: 'fr'
   - macros
+  - git-revision-date-localized
 markdown_extensions:
   - admonition
   - codehilite
