--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-root</artifactId>
-        <version>20.9.1-SNAPSHOT</version>
+        <version>20.9.1</version>
     </parent>
 
     <artifactId>tock-bot</artifactId>
