--- a/translator/pom.xml
+++ b/translator/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-root</artifactId>
-        <version>20.9.1</version>
+        <version>20.9.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-translator</artifactId>
