Doc: explain logging + upgrade code highlight
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/docs-mk/fr/mkdocs.yml
+++ b/docs-mk/fr/mkdocs.yml
@@ -74,6 +74,8 @@ plugins:
 markdown_extensions:
   - admonition
   - codehilite
+  - pymdownx.tabbed
+  - pymdownx.superfences
   - toc:
       permalink: true
 copyright: 'Copyright &copy; 2017/2020 Tock'
