--- a/nlp/entity-evaluator/entity-value/pom.xml
+++ b/nlp/entity-evaluator/entity-value/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-entity-evaluator</artifactId>
-        <version>20.9.2-SNAPSHOT</version>
+        <version>20.9.2-1</version>
     </parent>
 
     <artifactId>tock-nlp-entity-value</artifactId>
