--- a/docs-mk/en/mkdocs.yml
+++ b/docs-mk/en/mkdocs.yml
@@ -33,12 +33,15 @@ nav:
 
 theme:
   name: 'material'
+  language: 'en'
   logo: 'assets/images/logo-white.png'
   favicon: 'img/favicon.png'
   features:
     - tabs
     - instant
 plugins:
+  - search:
+      lang: 'en'
   - macros
   - git-revision-date-localized
 markdown_extensions:
@@ -48,5 +51,7 @@ markdown_extensions:
       permalink: true
 copyright: 'Copyright &copy; 2017/2020 Tock'
 extra:
+  search:
+    language: 'en'
   tock:
     logo: 'assets/images/logo.svg'
