--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -44,6 +44,7 @@
         <module>connector-teams</module>
         <module>connector-businesschat</module>
         <module>connector-web</module>
+        <module>connector-web-model</module>
         <module>connector-google-chat</module>
         <module>orchestration</module>
         <module>xray</module>
@@ -140,6 +141,11 @@
             <dependency>
                 <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-connector-web</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ai.tock</groupId>
+                <artifactId>tock-bot-connector-web-model</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
