Studio: upgrade ngx-moment + fix expressions in decorators
- amend: remove ng2-charts import from nlp admin module, regen package-lock
- refactors !1197
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -48,12 +48,13 @@
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "2.24.0",
     "nebular-icons": "1.1.0",
+    "ng2-charts": "^2.4.2",
     "ng2-ckeditor": "^1.2.7",
     "ng2-completer": "^3.0.3",
     "ng2-file-upload": "^1.4.0",
     "ngx-echarts": "^5.2.2",
     "ngx-infinite-scroll": "^8.0.2",
-    "ngx-moment": "^3.5.0",
+    "ngx-moment": "^5.0.0",
     "node-sass": "^4.14.1",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
