resolves #1146 Doc: Improve the messenger connector documentation
* Doc: fix typo

* Doc: refactor Messenger documentation by Francois Nollen

* Doc: add instructions for retrieving connector URL

* Doc: refactor English messenger documentation

* Doc: regen website

--- a/docs-mk/en/mkdocs-dark.yml
+++ b/docs-mk/en/mkdocs-dark.yml
@@ -9,6 +9,7 @@ nav:
   - 'Overview': 'index.md'
   - 'Try Tock Studio':
     - 'Create your 1st bot': 'guide/studio.md'
+    - 'Set up Messenger': 'guide/messenger.md'
     - 'Build NLP models': 'build-nlp-model.md'
     - 'Monitor NLP models': 'evaluate-the-model.md'
   - 'Develop Stories':
