Implement toggleable dark theme

--- a/docs/_data/toc_en.yml
+++ b/docs/_data/toc_en.yml
@@ -46,7 +46,7 @@ content:
         url: 'en/about/jobs'
   - title: '🇬🇧 🇫🇷'
     url: 'fr'
-  - title: 'Dark Mode'
-    external-url: 'https://theopenconversationkit.github.io/tock/en-dark/'
+  - title: 'Toggle Dark Mode'
+    external-url: '?scheme=dark'
   - title: 'Tock.ai 🔗'
     external-url: 'https://doc.tock.ai'
