--- a/docs/_data/toc_fr.yml
+++ b/docs/_data/toc_fr.yml
@@ -98,7 +98,7 @@ content:
         url: 'apropos/emploi'
   - title: '🇫🇷 🇬🇧'
     url: 'en'
-  - title: 'Mode sombre'
-    external_url: 'https://theopenconversationkit.github.io/tock/fr-dark/'
+  - title: 'Mode clair/sombre'
+    external_url: '?scheme=dark'
   - title: 'Tock.ai 🔗'
     external_url: 'https://doc.tock.ai'
